infra/headlamp/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: headlamp
  namespace: headlamp
  labels:
    app.kubernetes.io/name: headlamp
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: headlamp
  template:
    metadata:
      labels:
        app.kubernetes.io/name: headlamp
    spec:
      serviceAccountName: headlamp
      #flux-plugin
      containers:
        - name: headlamp
          image: ghcr.io/headlamp-k8s/headlamp:v0.45.0
          imagePullPolicy: IfNotPresent
          args:
            - -in-cluster
            - -plugins-dir=/headlamp/plugins
            - -log-level=debug
            - -oidc-client-id=$(HEADLAMP_CONFIG_OIDC_CLIENT_ID)
            - -oidc-client-secret=$(HEADLAMP_CONFIG_OIDC_CLIENT_SECRET)
            - -oidc-idp-issuer-url=$(HEADLAMP_CONFIG_OIDC_IDP_ISSUER_URL)
            - -oidc-callback-url=$(HEADLAMP_CONFIG_OIDC_CALLBACK_URL)
            - -oidc-scopes=$(HEADLAMP_CONFIG_OIDC_SCOPES)
          ports:
            - name: http
              containerPort: 4466
              protocol: TCP
          volumeMounts:
            - name: plugins
              mountPath: /headlamp/plugins
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 5
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 3
          resources:
            requests:
              cpu: 10m
              memory: 128Mi
            limits:
              cpu: 50m
              memory: 256Mi

      volumes:
        - name: plugins
          emptyDir: {}
